--- a/themes/standard_3_0/modules.css
+++ b/themes/standard_3_0/modules.css
@@ -1126,9 +1126,8 @@ div.row2 {
 }
 #shop .customer_old {
     float: left;
-    width: 48%;
-    padding: 0 2% 0 0;
-    margin: 0 2% 0 0;
+    width: 445px;
+    margin: 0 20px 0 0;
     border-right: 1px solid #DDDDDD;
 }
 #shop .customer_old p {
@@ -1144,8 +1143,7 @@ div.row2 {
     width: 248px;
 }
 #shop .customer_new {
-    float: left;
-    width: 47%;
+    display: block;
 }
 #shop .customer_old h2,
 #shop .customer_new h2 {
